--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "kaede.me.howoldrobot"
         minSdkVersion 10
-        targetSdkVersion 21
+        targetSdkVersion 16
         versionCode 1
         versionName "1.0"
     }
@@ -28,10 +28,11 @@ android {
 }
 
 dependencies {
-   compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     //compile files('libs/commons-logging-1.1.3.jar')
     //compile files('libs/httpclient-4.3.3.jar')
     //compile files('libs/httpcore-4.3.2.jar')
-   // compile files('libs/httpmime-4.3.3.jar')
+    // compile files('libs/httpmime-4.3.3.jar')
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:support-v4:22.1.1'
 }
