--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,15 @@
     <application
         android:name=".RobotApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic"
+        android:icon="@drawable/icon_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".analyse.activity.MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/app_label"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
