--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kaede.me.howoldrobot" >
+    package="me.kaede.howoldrobot" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,13 +11,13 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name=".RobotApplication"
+        android:name="me.kaede.howoldrobot.RobotApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".analyse.activity.MainActivity"
+            android:name="me.kaede.howoldrobot.analyse.activity.MainActivity"
             android:label="@string/app_label"
             android:screenOrientation="portrait" >
             <intent-filter>
