use `android-async-http` instead of `apache httpclient`

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     // compile files('libs/httpmime-4.3.3.jar')
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:support-v4:22.1.1'
+    compile 'com.loopj.android:android-async-http:1.4.7'
 }
