--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "me.kaede.howoldrobot"
         minSdkVersion 10
         targetSdkVersion 16
-        versionCode 21
-        versionName "0.2.1"
+        versionCode 30
+        versionName "0.3.0"
     }
     buildTypes {
         release {
@@ -28,11 +28,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    //compile files('libs/commons-logging-1.1.3.jar')
-    //compile files('libs/httpclient-4.3.3.jar')
-    //compile files('libs/httpcore-4.3.2.jar')
-    // compile files('libs/httpmime-4.3.3.jar')
+    //compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:support-v4:22.1.1'
     compile 'com.loopj.android:android-async-http:1.4.7'
