--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,28 @@
+/*
+ * Copyright (c) 2016. Kaede
+ */
+
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
+        useLibrary 'org.apache.http.legacy'
         applicationId "me.kaede.howoldrobot"
-        minSdkVersion 10
-        targetSdkVersion 22
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 30
         versionName "0.3.0"
+        multiDexEnabled false
     }
     buildTypes {
         release {
-            multiDexEnabled false
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
@@ -26,11 +30,12 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+    buildToolsVersion '25'
 }
 
 dependencies {
-    //compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:support-v4:22.2.1'
+    // supports
+    compile "com.android.support:support-v4:${rootProject.ext.androidSupportLibraryVersion}"
+    compile "com.android.support:appcompat-v7:${rootProject.ext.androidSupportLibraryVersion}"
     compile 'com.loopj.android:android-async-http:1.4.7'
 }
