--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,27 @@
+/*
+ * Copyright (c) 2016. Kaede
+ */
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        buildGradle = '2.2.2';
+        buildToolsVersion = '25.0.1'
+        targetSdkVersion = 25
+        compileSdkVersion = 24
+        minSdkVersion = 9
+        androidSupportLibraryVersion = '25.0.1'
+
+        // 3rd
+        junit = '4.12'
+        espressoCore = '2.2.2'
+    }
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
