--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="me.kaede.howoldrobot.analyse.activity.MainActivity"
+            android:name="me.kaede.howoldrobot.analyse.MainActivity"
             android:label="@string/app_label"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBar">
