--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,9 @@ android {
         applicationId "me.kaede.howoldrobot"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 30
-        versionName "0.3.0"
+        versionCode 301
+        versionName "0.3.1"
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
         multiDexEnabled false
     }
     buildTypes {
@@ -34,8 +35,15 @@ android {
 }
 
 dependencies {
-    // supports
+    // Test
+    testCompile 'junit:junit:4.12'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+    // Supports
     compile "com.android.support:support-v4:${rootProject.ext.androidSupportLibraryVersion}"
     compile "com.android.support:appcompat-v7:${rootProject.ext.androidSupportLibraryVersion}"
-    compile 'com.loopj.android:android-async-http:1.4.7'
+    compile 'commons-io:commons-io:2.5'
+    compile 'moe.studio:dispatcher:0.1.1'
 }
